# scid

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  COPYING  ChangeLog  Changelog  Dockerfile  Doxyfile  Info.plist  InnoSetup.iss  Makefile  Makefile.arm  Makefile.conf  Makefile.conf.darwin  Makefile.cygwin  Makefile.mingw  Makefile.pocket_x86  Makefile.vc  README  README.md  THANKS  TODO  azure-pipelines.yml  bench_results.txt  com.github.benini.scid.yml  configure  scid.eco  scid.icns  scid.rc
engines/Phalanx-XXII/: bcreate.c  book.c  data.c  makefile  phalanx.c  phalanx.h  search.c
engines/crafty-21.6/: Makefile  chess.h  egtb.cpp  main.c
engines/phalanx-scid/: all.msvc  evaluate.c  io.c  makefile  phalanx.h  static.c
engines/scidlet/: scidlet.cpp
engines/togaII1.2.1a/src/: Makefile  eval.cpp  fruit  trans.cpp
flatpak/: com.github.benini.scid.appdata.xml  com.github.benini.scid.desktop  com.github.benini.scid.yml  io.github.benini.scid.appdata.xml  io.github.benini.scid.yml  readme.txt
gtest/: CMakeLists.txt  pgn_encode_test.cpp  res_gameLatin1.pgn  test_codec.cpp  test_containers.cpp  test_decodemove.cpp  test_filebuf.cpp  test_filebuf.txt  test_game.cpp  test_hfilter.cpp  test_index.cpp  test_indexentry.cpp  test_indexentry_v4_6.h  test_namebase.cpp  test_pgnparser.cpp  test_position.cpp  test_scidbase.cpp  test_sortcache.cpp  test_stored.cpp  test_str.cpp
help/: Contents.html  CorrChess.html  Email.html  Finder.html  Guide.html  Import.html  Index.html  Menus.html  PGN.html  Repertoire.html  TB.html
html/: scid.css  scid.js
img/pieces/: ReadMe.txt
img/pieces/Leipzig/: copyright
pocket/: Engine_porting.txt  backoff.tcl  book.tcl  checkmemlog.tcl  core.tcl  distrib.sh  edit.tcl  engine.tcl  fics.tcl  hires.tcl  htext.tcl  import.tcl  log  lowres.tcl  misc.tcl  novag.tcl  pgn.tcl  push.sh  scidppc.tcl  tactics.tcl  ui.tcl  validate.tcl
pocket/fruit_21/: readme.txt  technical_10.txt
pocket/fruit_21/src/: Makefile  Makefile.arm  ipc.c  main.cpp  option.cpp  posix.cpp  protocol.cpp  search.cpp  trans.cpp
pocket/gambitfruit/: readme.txt
pocket/gambitfruit/src/: Makefile  Makefile.arm  board.cpp  eval.cpp  ipc.armo  ipc.c  main.cpp  material.cpp  option.cpp  pawn.cpp  posix.cpp  protocol.cpp  protocol.h  pst.cpp  search.cpp  search.h  search_full.cpp  see.cpp  sort.cpp  trans.cpp
pocket/glaurung/src/: Makefile  Makefile.arm  Readme.txt  (+29 more)
pocket/greko/: history.txt
pocket/msgs/: es.msg  fr.msg
pocket/personality/: mid.per  opn.per
pocket/robbolito/: README  RobboLito.txt  history.txt
pocket/scorpio/: liscense.txt  readme.txt  scorpio.ini
pocket/search/: board.tcl  header.tcl  material.tcl  search.tcl
pocket/stockfish/: Readme.txt
pocket/toga134/: readme.txt
pocket/utils/: date.tcl  history.tcl  scrolledframe.tcl  string.tcl  utils.tcl
resources/macos/: Info.plist
resources/win/: scid.manifest  scid.rc
scripts/: bench_codec.tcl  benchmark_codec.tcl  download_lichess_broadcasts.sh  filter_spellcheck_file.tcl  sc_addmove.tcl  sc_comment.tcl  sc_eco.tcl  sc_epgn.tcl  sc_import.tcl  sc_maketree.tcl  sc_remote.tk  sc_spell.tcl  sc_tree.tcl  sc_upgrade.tcl  scidpgn.tcl  spf2spi.tcl  spliteco.tcl  tbstats.tcl  wmtest.tk
scripts/CB-Mega/: Mega2Scid.pl  README
src/: attacks.h  board_def.h  bytebuf.cpp  bytebuf.h  bytepack.h  codec.h  codec_memory.h  codec_native.h  codec_pgn.h  codec_proxy.h  codec_rocksdb.h  codec_scid4.cpp  codec_scid4.h  codec_scid5.h  common.h  containers.h  crosstab.cpp  crosstab.h  cutil.c  date.cpp  date.h  dbasepool.cpp  dbasepool.h  dstring.cpp  dstring.h  eco2epd.cpp  engine.cpp  engine.h  error.h  fastgame.h  filebuf.h  filter.cpp  filter.h  fullmove.h  game.cpp  game.h  gameview.h  gfile.cpp  gfile.h  hash.h  (+75 more)
src/egtb/: probe.txt  tbdecode.c  tbindex.cpp
src/mtbgen/: Makefile  mtbgen.cpp
src/polyglot/: Makefile  board.cpp  book.cpp  book.h  book_make.cpp  book_merge.cpp  fen.cpp  game.cpp  hash.h  io.cpp  main.cpp  move.cpp  option.cpp  parse.cpp  pgn.cpp  pgn.h  random.cpp  random.h  san.cpp  search.cpp  util.cpp  util.h
src/zlib/: ChangeLog  Makefile  Makefile.arm  Makefile.pocket_x86  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
tcl/: .pprep  analysis.tcl  appearance.tcl  basewind.tcl  bitmaps.tcl  board.tcl  bookmark.tcl  config.tcl  config.tcl.conf  czech.tcl  darktheme.tcl  deutsch.tcl  edit.tcl  email.tcl  end.tcl  enginecfg.tcl  enginecomm.tcl  english.tcl  epd.tcl  errors.tcl  file.tcl  fontsel.tcl  francais.tcl  game.tcl  graph.tcl  help.tcl  htext.tcl  hungary.tcl  import.tcl  italian.tcl  keyboard.tcl  lang.tcl  language.tcl  main.tcl  maint.tcl  menus.tcl  misc.tcl  move.tcl  nederlan.tcl  norsk.tcl  (+17 more)
tcl/contrib/: combobox.tcl
tcl/ezsmtp/: ChangeLog  README.txt  ezsmtp.html  ezsmtp.tcl  install.tcl  license.txt  postinst.tcl  test_examples.txt
tcl/file/: bookmark.tcl  epd.tcl  finder.tcl  maint.tcl  recent.tcl  spellchk.tcl
tcl/game/: browser.tcl
tcl/help/: help.tcl  tips.tcl
tcl/lang/: catalan.tcl  checklangs.tcl  czech.tcl  deutsch.tcl  english.tcl  francais.tcl  greek.tcl  hungary.tcl  italian.tcl  nederlan.tcl  norsk.tcl  polish.tcl  portbr.tcl  propagatelang.tcl  removetoken.tcl  rename.sh  russian.tcl  serbian.tcl  spanish.tcl  suomi.tcl  swedish.tcl
tcl/misc/: flags.tcl  misc.tcl
tcl/search/: board.tcl  header.tcl  material.tcl  search.tcl
tcl/tools/: analysis.tcl  calvar.tcl  comp.tcl  correspondence.tcl  email.tcl  fics.tcl  graphs.tcl  import.tcl  inputengine.tcl  novag.tcl  opening.tcl  optable.tcl  pinfo.tcl  preport.tcl  ptracker.tcl  reper.tcl  reviewgame.tcl  sergame.tcl  tablebase.tcl  tacgame.tcl  tactics.tcl  uci.tcl
tcl/utils/: bibliography.tcl  date.tcl  font.tcl  graph.tcl  history.tcl  metadata.tcl  pane.tcl  sound.tcl  tooltip.tcl  validate.tcl  win.tcl
tcl/windows/: book.tcl  browser.tcl  comment.tcl  crosstab.tcl  eco.tcl  engine.tcl  gamelist.tcl  pfinder.tcl  pgn.tcl  preferences.tcl  setup.tcl  stats.tcl  switcher.tcl  tourney.tcl  tree.tcl
(+202 files in other folders)
